Fixed spacing between portfolio and chart

--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ body {
 }
 
 #styleit {
-	margin: 30px auto 30px auto;
+	margin: 30px auto 10px auto;
 	min-width:700px;
 	max-width: 800px;
 	border-radius:10px;
@@ -52,7 +52,6 @@ header {
 
 #content {
 	padding: 0 2rem 2rem 2rem;
-	margin-bottom:20px;
 }
 
 	#totalDiv {
@@ -251,7 +250,7 @@ header {
 			}
 
 #chartDemoContainer {
-	margin: 30px auto 30px auto;
+	margin: 0 auto 0 auto;
 	min-width:700px;
 	max-width: 800px;
 	border-radius:10px;
